--- a/main.css
+++ b/main.css
@@ -9,7 +9,13 @@ html, body {
 }
 
 html {
-    background: hsl(215, 20%, 2%);
+    background: linear-gradient(15deg, hsl(209, 30%, 60%) 0%, hsl(215, 20%, 24%) 34%, hsl(209, 13%, 22%) 100%);
+    background-size: 100% 200%;
+
+    -webkit-animation: AnimationBG 14s ease infinite;
+    -moz-animation: AnimationBG 14s ease infinite;
+    -o-animation: AnimationBG 14s ease infinite;
+    animation: AnimationBG 14s ease infinite;
 }
 
 body {
@@ -17,14 +23,6 @@ body {
     grid-template-rows: auto auto;
     grid-template-columns: 2fr 1fr;
     grid-gap: 0;
-
-    background: linear-gradient(15deg, hsla(209, 30%, 60%, 0.5) 0%, hsla(215, 20%, 24%, 0.5) 34%, hsla(209, 13%, 22%, 0.5) 100%);
-    background-size: 100% 200%;
-
-    -webkit-animation: AnimationBG 14s ease infinite;
-    -moz-animation: AnimationBG 14s ease infinite;
-    -o-animation: AnimationBG 14s ease infinite;
-    animation: AnimationBG 14s ease infinite;
 }
 
 @-webkit-keyframes AnimationBG {
